@@ -1,3 +1,8 @@
+[B]2.10.0[/B]
+- Fix for python 3.9 and higher (Nexus)
+- Default to UI client
+- Play videos by channel ID not channel number
+
 [B]2.9.6[/B]
 - Fix for UI client menu.
 
